--- a/Projekt/css/styles.css
+++ b/Projekt/css/styles.css
@@ -1,19 +1,72 @@
 :root{
-    --main-font: font-family: 'Roboto', sans-serif;
---secondary-font: font-family: 'Raleway', sans-serif;
+    --main-font: font-family: 'Raleway', sans-serif;
+    --secondary-font: font-family: 'Roboto', sans-serif;
     --main-color: #2196F3;
 }
 body{
-    font-family: var(--main-font);
+    font-family: var(--secondary-font);
 }
+
+/* ##### COMPONENTS ##### */
+
+/* ##### END COMPONENTS ##### */
 
 /* ##### HEADER ##### */
-.navigation-list-link{
-font-weight: 500;
-font-size: 14px;
-line-height: 1.142;
-letter-spacing: 0.02em;
-
-color: #212121;
+.navigation-list-link {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.142;
+    letter-spacing: 0.02em;
+    color: #212121;
 }
+.navigation-list-link:hover,
+.navigation-list-link:focus,
+.address:hover,
+.address:focus,
+.address-phone-number:hover,
+.address-phone-number:focus {
+color: var(--main-color) ;
+}
+.address, .address-phone-number {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.142;
+    letter-spacing: 0.02em;
+     color: #757575;
+}     
+.modal-btn {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.875;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
+    background: #2196F3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+}
+.modal-btn:hover,
+.modal-btn:focus {color:rgba(0, 0, 0, 0.15)}
 /* ##### END HEADER ##### */
+
+/* ##### MAIN ##### */
+.main-texth1 {
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 900;
+font-size: 44px;
+line-height: 1.363;
+text-align: center;
+letter-spacing: 0.06em;
+color: #FFFFFF;
+
+}
+/* ##### END MAIN ##### */
